--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title></title>
 </head>
 <body>
+	<div id="test">
+		<img style="display:block;margin:auto;margin-bottom:5px" src="http://placehold.it/350x150">
+	</div>
+	<img style="display:block; margin:auto; " src="shadow2.png">
 
 </body>
 </html>
