--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 </head>
 <body>
 	<div id="test">
+		<div id="logo-block">
+			<img style="display:inline-block; padding:5px" src="http://placehold.it/172x61">
+			<span class="logotext1"> FLICKERSONE ETC ETC ETC</span>
+		</div>
+		<nav>
+		    <ul>
+		        <li><a href="#"><span>Home</span></a></li>
+		        <li><a href="#"><span>Categories</span></a></li>
+		        <li><a href="#"><span>About</span></a></li>             
+		        <li><a href="#"><span>Portfolio</span></a></li>
+		        <li><a href="#"><span>Contact</span></a></li>
+		    </ul>
+		</nav>
 		<img style="display:block;margin:auto;margin-bottom:5px" src="http://placehold.it/350x150">
 	</div>
 	<img style="display:block; margin:auto; " src="shadow2.png">
