--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 		        <li><a href="#"><span>Contact</span></a></li>
 		    </ul>
 		</nav>
-		<img style="display:block;margin:auto;margin-bottom:5px" src="http://placehold.it/350x150">
+		<img style="display:block;margin:auto" src="http://placehold.it/350x150">
+		<br>
+
 	</div>
-	<img style="display:block; margin:auto; " src="shadow2.png">
+	<div id="shadowbtm"></div>
+	
 
 </body>
 </html>
