--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<nav>
 		    <ul>
 		        <li><a href="#"><span>Home</span></a></li>
-		        <li><a href="#"><span>Categories</span></a></li>
+		        <li><a href="#"><span>Services</span></a></li>
 		        <li><a href="#"><span>About</span></a></li>             
 		        <li><a href="#"><span>Portfolio</span></a></li>
 		        <li><a href="#"><span>Contact</span></a></li>
