--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		</div>
 		<nav>
 		    <ul>
-		        <li><a href="#"><span>Home</span></a></li>
+		        <li><a href="index.html"><span>Home</span></a></li>
 		        <li><a href="#"><span>Services</span></a></li>
 		        <li><a href="#"><span>About</span></a></li>             
 		        <li><a href="#"><span>Portfolio</span></a></li>
