--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</div>
 		<nav>
 		    <ul>
-		        <li><a href="index.html"><span>Home</span></a></li>
+		        <li><a href="#"><span>Home</span></a></li>
 		        <li><a href="#"><span>Services</span></a></li>
 		        <li><a href="about.html"><span>About</span></a></li>             
 		        <li><a href="#"><span>Portfolio</span></a></li>
