--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<a href="intent://send/0132829456#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end">test</a>
+<a href="intent://send/+60126992766#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end">test</a>
