--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<a href="intent://send/60163575736#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end">test</a>
+<a href='sms:+60132228549'>Call me, maybe?</a>
