--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div id="test">
 		<div id="logo-block">
 			<img style="display:inline-block; padding:5px" src="http://placehold.it/172x61">
-			<span class="logotext1"> FLICKERSONE ETC ETC ETC</span>
+			<span class="logotext1"> Gh Gh </span>
 		</div>
 		<nav>
 		    <ul>
